NetPolicy/allow-ns-spec.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-spec-pod-and-namespace
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: network1
        podSelector:
          matchLabels:
            deployment: sample
